apps/media/slskd/slskd-middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: slskd-headers
  namespace: media
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "http"
    customResponseHeaders:
      Connection: "keep-alive"
