apps/media/slskd/slskd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: slskd
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`slskd.catacumbas69.com`)
      kind: Rule
      services:
        - name: slskd
          port: 5030
          responseForwarding:
            flushInterval: "100ms"
      middlewares:
        - name: slskd-headers
